test: 주문 생성 관련 테스트 코드 작성 (S12P21D211-258)